--- a/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
+++ b/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
@@ -8,34 +8,104 @@
 
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:minHeight="?attr/actionBarSize"
-        android:background="@color/color_primary"
-        android:layout_width="368dp"
+        android:id="@+id/add_commentimmediate_alert_toolbar_xml"
+        android:layout_width="0dp"
         android:layout_height="56dp"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/cardView"
-        app:layout_constraintTop_toTopOf="parent">
+
+        android:background="@color/sikander_background_login"
+        android:minHeight="?attr/actionBarSize"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.0">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <ImageView
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+
+                android:src="@drawable/cluex_logo"
+                android:id="@+id/imageView2"
+
+                app:layout_constraintBottom_toTopOf="@+id/view"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="0.75"
+                android:layout_marginStart="7dp"
+                android:layout_marginRight="333dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="7dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                android:layout_marginEnd="333dp" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="LUEX"
+                android:textColor="@color/sikander_front_login"
+                android:textSize="20dp"
+                android:id="@+id/toolbar_title"
+
+                app:layout_constraintLeft_toRightOf="@+id/imageView2"
+                android:layout_marginLeft="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="22dp"
+                android:layout_marginStart="4dp" />
+            <View
+                android:layout_width="100dp"
+                android:layout_height="1dp"
+                android:background="@color/sikander_front_login"
+                android:id="@+id/view"
+
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="1.0"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="@+id/imageView2"
+                app:layout_constraintRight_toRightOf="@+id/toolbar_title"
+                app:layout_constraintHorizontal_bias="0.47"
+                android:layout_marginStart="8dp" />
+
+        </android.support.constraint.ConstraintLayout>
+
+
     </android.support.v7.widget.Toolbar>
+
+
+
 
 
 
     <android.support.v7.widget.CardView
         android:layout_width="0dp"
-        android:layout_height="214dp"
+        android:layout_height="543dp"
+
         tools:layout_constraintTop_creator="1"
         tools:layout_constraintRight_creator="1"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="70dp"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:cardCornerRadius="6dp"
 
-        android:layout_below="@id/toolbar"
-        android:id="@+id/cardView">
+        android:layout_below="@id/add_commentimmediate_alert_toolbar_xml"
+        android:id="@+id/cardView"
+
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/add_commentimmediate_alert_toolbar_xml"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,8 +117,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25dp"
-                android:textColor="#3fb4f7"
-                android:text="Add a Comment"
+                android:textColor="@color/sikander_background_login"
+                android:text="Add Alert Details"
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"/>
 
@@ -64,4 +134,47 @@
                 android:inputType="textMultiLine" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
+
+    <Button
+        android:id="@+id/add_immediate_alert_detail_btn_xml"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+
+        android:text="Add Details"
+        android:textColor="@color/sikander_front_login"
+        android:backgroundTint="@color/sikander_background_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintHorizontal_bias="0.207"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.993" />
+
+    <Button
+        android:id="@+id/cancel_immediate_alert_detail_btn_xml"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+
+        android:layout_marginRight="8dp"
+
+        android:text="Cancel"
+        android:textColor="@color/sikander_front_login"
+        android:backgroundTint="@color/sikander_background_login"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintVertical_bias="0.995"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.778" />
 </android.support.constraint.ConstraintLayout>
