--- a/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
+++ b/app/src/main/res/layout/activity_add_comment__immediate_alert.xml
@@ -27,53 +27,53 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-
-                android:src="@drawable/cluex_logo"
-                android:id="@+id/imageView2"
-
-                app:layout_constraintBottom_toTopOf="@+id/view"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="8dp"
-                app:layout_constraintVertical_bias="0.75"
-                android:layout_marginStart="7dp"
-                android:layout_marginRight="333dp"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginLeft="7dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                android:layout_marginEnd="333dp" />
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="LUEX"
-                android:textColor="@color/sikander_front_login"
-                android:textSize="20dp"
-                android:id="@+id/toolbar_title"
-
-                app:layout_constraintLeft_toRightOf="@+id/imageView2"
-                android:layout_marginLeft="4dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="22dp"
-                android:layout_marginStart="4dp" />
-            <View
-                android:layout_width="100dp"
-                android:layout_height="1dp"
-                android:background="@color/sikander_front_login"
-                android:id="@+id/view"
-
+                android:background="@drawable/border"
+                android:orientation="horizontal"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginTop="8dp"
-                app:layout_constraintVertical_bias="1.0"
-                android:layout_marginLeft="8dp"
-                app:layout_constraintLeft_toLeftOf="@+id/imageView2"
-                app:layout_constraintRight_toRightOf="@+id/toolbar_title"
-                app:layout_constraintHorizontal_bias="0.47"
-                android:layout_marginStart="8dp" />
+                app:layout_constraintVertical_bias="0.4"
+                app:layout_constraintHorizontal_bias="0.0">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+
+                    android:src="@drawable/cluex_logo"
+                    android:id="@+id/imageView2"
+
+                     />
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@color/sikander_front_login">
+
+                </View>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LUEX"
+                    android:textColor="@color/sikander_front_login"
+                    android:textSize="30dp"
+                    android:id="@+id/toolbar_title"
+
+                   />
+
+            </LinearLayout>
+
+
+
 
         </android.support.constraint.ConstraintLayout>
 
