--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -6,6 +6,80 @@
     android:layout_height="match_parent"
     tools:context="com.example.cluex.Activities.CameraActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/add_commentimmediate_alert_toolbar_xml"
+        android:layout_width="0dp"
+        android:layout_height="56dp"
+
+        android:background="@color/sikander_background_login"
+        android:minHeight="?attr/actionBarSize"
+
+        app:layout_constraintLeft_toLeftOf="parent"
+
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintVertical_bias="0.0">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:orientation="horizontal"
+                android:layout_marginRight="8dp"
+                app:layout_constraintRight_toRightOf="parent"
+                android:layout_marginLeft="8dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="8dp"
+                app:layout_constraintVertical_bias="0.4"
+                app:layout_constraintHorizontal_bias="0.0">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+
+                    android:src="@drawable/cluex_logo"
+                    android:id="@+id/imageView2"
+
+                    />
+
+                <View
+                    android:layout_width="2dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginRight="8dp"
+                    android:background="@color/sikander_front_login">
+
+                </View>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="LUEX"
+                    android:textColor="@color/sikander_front_login"
+                    android:textSize="30dp"
+                    android:id="@+id/toolbar_title"
+
+                    />
+
+            </LinearLayout>
+
+
+
+
+        </android.support.constraint.ConstraintLayout>
+
+
+    </android.support.v7.widget.Toolbar>
+
+
     <Button
         android:id="@+id/add_photo_btn_xml"
         android:layout_width="wrap_content"
@@ -24,24 +98,25 @@
         android:layout_height="540dp"
 
 
-
-        android:foregroundGravity="center"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/add_photo_btn_xml">
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:foregroundGravity="center"
+        app:layout_constraintBottom_toTopOf="@+id/add_photo_btn_xml"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/cluex_image_gallery_recycler_view_xml"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:foregroundGravity="center"
-            android:layout_marginLeft="17dp">
+            android:layout_marginLeft="17dp"
+            android:foregroundGravity="center">
 
         </android.support.v7.widget.RecyclerView>
 
